# verifoxx-morello-compartment-framework

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  OWNERS.txt  README.md  macros.cmake  main.cpp  toolchain.cmake
capmgr/: CCompartment.cpp  CCompartment.h  CCompartmentApiProxy.h  capmgr_services.cpp  capmgr_services.h  compartment_caller_asm.S
capmgr/cap_relocs/: CCompartmentLibs.cpp  CCompartmentLibs.h  CDynamicSection.cpp  CDynamicSection.h  CRelocationTable.cpp  CRelocationTable.h  CSharedObject.cpp  CSharedObject.h  shared_object_common.h
capmgr/cap_relocs/link_map_internal/: link-internal.h
common/: CCapMgrServiceData.h  CCompartmentData.h  capmgr_service_function_types.h  comp_caller.c  comp_caller.h  comp_common_asm.h  comp_common_defs.h
compartment/: comp_entry.cpp  comp_entry_trampoline_asm.S  compartment_basic_logger.c  compartment_basic_logger.h  service_call_proxy.h
example_usage/: example_capmgr_service_api.h  example_capmgr_service_api_impl.cpp  example_comp_api.h  example_comp_api_impl.cpp
utils/: CCapMgrException.h  CCapMgrLogger.h  CCapability.h  Range.h
